--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
   "directories": {
     "test": "tests"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/sunflowerdeath/broccoli-render-handlebars"
+  },
   "scripts": {
     "test": "mocha tests"
   },
